test_scores/negative_dimers/features/Q69YQ0.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q69YQ0.pkl.xz